--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "genshin-ui",
+  "name": "@shi-zhong/genshin-ui",
   "homepage": "https://github.com/shi-zhong/genshin-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "type": "module",
   "main": "./dist/lib/index.js",
@@ -49,10 +49,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
-  "dependencies": {
-    "vue": "^3.3.10"
-  },
   "devDependencies": {
+    "vue": "^3.3.10",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/gulp": "^4.0.17",
